--- a/Datepicker.css
+++ b/Datepicker.css
@@ -18,27 +18,37 @@
 	border: 2px solid black;
 	color: hsl(35, 100%, 50%);
 	filter: drop-shadow(16px 16px 20px blue);
-	height: 100px;
-	margin-left: 25px;
+	height: 120px;
+	margin-left: 5px;
 	margin-right: 0px;
 	padding: 15px;
+	overflow: hidden;
+	position: fixed;
 	width: 100px;
-	
-	
+
+
 }
 
 #tabledata1 {
 	cursor: pointer;
 }
 #tabledata1:hover {
-	
+
 	background-color: blue;
 	border-radius : 100px;
 	color: rgba(255,255,255,2.5);
 }
 
+#today {
+	border-radius: 100px;
+	background-color: lightblue;
+	cursor: pointer;
+}
+
 #weektd {
 	color: rgba(255,255,255,2.5);
+	margin-left: 0px;
+	margin-right: 10px;
 }
 
 #yeartd {
